# anystat-python

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/: publish.yml
.github/workflows/: ci.yml
examples/: 01_quickstart.py  02_custom_events.py  03_configuration.py  04_debug_mode.py  05_deep_links.py  06_webhook.py
src/anystat/: __init__.py  _batcher.py  _client.py  _config.py  _constants.py  _retry.py  errors.py
src/anystat/_models/: _base.py  models.py
src/anystat/aiogram/: __init__.py  middleware.py  setup.py
src/anystat/aiogram/_models/: models.py
tests/: test_aiogram.py  test_batcher.py  test_client.py  test_middleware.py
